<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="About_us">About me</string>
    <string name="Add">Add</string>
    <string name="App_name">Photo hider plus</string>
    <string name="Can_not_sign_in">Can not sign in</string>
    <string name="Change_keyword">Change_keyword</string>
    <string name="Change_password">Change password</string>
    <string name="Create_your_account">Create your account</string>
    <string name="Email">Keyword</string>
    <string name="Enter_new_keyword">Enter New Keyword</string>
    <string name="Enter_new_passowrd">Enter New password</string>
    <string name="Enter_your_email">Enter your Keyword</string>
    <string name="Forget_your_password">Forget your pasword?</string>
    <string name="Help">Help</string>
    <string name="Log_in">Log in with user name or finger print</string>
    <string name="Name">Name</string>
    <string name="Number">Number</string>
    <string name="Permission">Permissions not allowed the app will be close</string>
    <string name="Rate_us">mark to Application</string>
    <string name="Save">Save</string>
    <string name="Search">Search</string>
    <string name="Setting">Setting</string>
    <string name="Sighn_up">Sighn up</string>
    <string name="Start">Start</string>
    <string name="Sub_rate_us">with your mark and comment help to creator to improve the application</string>
    <string name="Sub_setting">change the setting of app like password ,keyword,number of show picture</string>
    <string name="Submit">Submit</string>
    <string name="The_picture_not_saved_plz_enter_the_name">the picture not saved plz enter the name</string>
    <string name="USERNAME">Username</string>
    <string name="Welcome">Welcome</string>
    <string name="Wrong_Email">Wrong email</string>
    <string name="Wrong_user_name_or_password">Wrong username or password</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="activity">ACTIVITY</string>
    <string name="app_name">MaterialTextField</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="change_numpic">Change number of show picture</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="feed">FEED</string>
    <string name="hello_world">Hello world!</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="incoming_sms">Incoming sms</string>
    <string name="introduce">introduce to friends</string>
    <string name="list_of_pbotos">List of photos</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="new_keyword">New Keyword</string>
    <string name="new_password">New password</string>
    <string name="outcoming_sms">outcoming sms</string>
    <string name="password">Password</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="path_search">M141,17 A9,9 0 1,1 142,16 L149,23</string>
    <string name="people">People</string>
    <string name="photos">Photos</string>
    <string name="profile">PROFILE</string>
    <string name="search_menu_title">Search</string>
    <string name="send_sms">Send sms</string>
    <string name="settings">SETTINGS</string>
    <string name="sms">Sms</string>
    <string name="sms_sent">Sms sent</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sub_introduce">support creator with introduce to friends</string>
    <string name="to">To</string>
    <string name="youre_sms">your sms</string>
</resources>
